--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1 id="message">The message is:</h1>
     <script src="index.js"></script>
     <input type="file" id="upload" />
-    <button onclick="uploadFile()">upload!</button>
+    <button onclick="uploadFile()">Rina upload!</button>
     <h2>Files:</h2>
     <div>
       <ul id="files-list"></ul>
